--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,247 @@
     transform: rotate(360deg);
   }
 }
+
+/* ---------------- Login ------------------------------ */
+
+.allLogin{
+  margin : 0;
+  padding: 0;
+  box-sizing: border-box;
+
+}
+
+.bodyLogin{
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+background-image: url("https://www.anxietycanada.com/wp-content/uploads/2019/02/background-black-blank-733857.jpg");
+background-repeat: no-repeat;
+background-size:2000px;
+text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
+}
+
+
+
+
+.box{
+  position: relative;
+  width: 380px;
+  height: 500px;
+  background: #1c1c1c;
+  border-radius: 8px;
+  overflow: hidden;
+}
+
+
+.box::before{
+  content: '';
+  position: absolute;
+  top: -50%;
+  left: -50%;
+  width: 380px;
+  height: 420px;
+  background: linear-gradient(0deg, transparent, #45f3ff, #45f3ff);
+  transform-origin: bottom right;
+  animation: animate 6s linear infinite;
+}
+
+.box::after{
+  content: '';
+  position: absolute;
+  top: -50%;
+  left: -50%;
+  width: 380px;
+  height: 420px;
+  background: linear-gradient(0deg, transparent, #45f3ff, #45f3ff);
+  transform-origin: bottom right;
+  animation: animate 6s linear infinite;
+  animation-delay: -3s;
+}
+
+@keyframes animate{
+  0%
+  {
+    transform: rotate(0deg);
+  }
+  100%
+  {
+    transform: rotate(360deg);
+  }
+}
+
+.form{
+   position: absolute;
+   inset:2px;
+   border-radius: 8px;
+   background: #28292d;
+   z-index: 10;
+   padding: 50px 40px;
+   display: flex;
+   flex-direction: column;
+}
+.form h2{
+  color: #45f3ff;
+  font-weight: 500;
+  text-align: center;
+  letter-spacing: 0.1em;
+}
+
+.inputBox{
+  position: relative;
+  width: 300px;
+  margin-top: 30px;
+
+}
+
+.inputBox input{
+  position: relative;
+  width: 100%;
+  padding: 20px 10px 10px;
+  background: transparent;
+  border: none;
+  outline: none;
+  color: #23242a;
+  font-size:  1em;
+  letter-spacing: 0.05em;
+  z-index: 10;
+}
+
+.inputBox span{
+  position: absolute;
+  left: 0;
+  padding: 20px 0px 10px;
+  font-size: 1em;
+  color: #8f8f8f;
+  pointer-events: none;
+  letter-spacing: 0.05em;
+  transition: 0.5s;
+}
+
+.inputBox input:valid ~ span,
+.inputBox input:focus ~ span
+{
+  color: #45f3ff;
+  transform: translateX(0px) translateY(-34px);
+  font-size: 0.75em;
+}
+
+.inputBox i{
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 2px;
+  background: #45f3ff;
+  border-radius: 4px;
+  transition: 0.5s;
+  pointer-events: none;
+  z-index: 9;
+
+}
+
+.inputBox input:valid ~ i,
+.inputBox input:focus ~ i
+{
+  height: 44px;
+}
+
+.links{
+display: flex;
+justify-content: space-between;
+}
+
+.links a{
+  margin: 15px 0;
+  font-size: 0.9em;
+  color: #8f8f8f;
+  text-decoration: none;
+}
+
+.links a:hover,
+.links a:nth-child(2){
+  color: #45f3ff;
+}
+
+button[type="submit"]{
+  border: none;
+  outline: none;
+  background: #45f3ff;
+  padding: 11px 25px;
+  width: 100px;
+  margin-top: 10px;
+  border-radius: 4px;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+button[type="submit"]:active{
+  opacity: 0.8;
+}
+
+.back{
+  margin-top: 10px;
+  margin-left: 50px;
+  color: #45f3ff;
+}
+
+/* ---------------------End of  login, signup, forgot password ---------------------- */
+
+#comment {
+  
+  resize: none;
+  height: 300px;
+}
+.nav {
+  font-weight: bold;
+  color: rgb(118, 4, 84);
+  margin-left: 40px;
+  font-family:cursive;
+  cursor:pointer;
+}
+
+
+ #navbarNavDropdown{
+  margin-left: 20px;
+  font-weight: bold;
+  font-style: italic;
+  color: chartreuse;
+
+    }   
+
+    .font{
+      font-weight: bold;
+      font-size: 25px;
+      color: rgb(55, 43, 226);
+      font-style:italic;
+    }
+
+
+.fa{
+  
+  border-radius: 15px;
+  font-weight: bold;
+  font-size: 15px;
+  color: rgb(13, 135, 4);
+  font-style:italic;
+}
+
+
+
+.dairy{
+  @import url('https://fonts.googleapis.com/css2?family=Alata&family=Crimson+Text&family=Lobster&family=Montserrat:ital,wght@0,300;0,600;1,600&display=swap');
+color:magenta ;
+font-family: Segoe Script;
+font-size: 40px;
+
+}
+.DATE{
+ font-weight: bold;
+ color:hotpink ;
+}
+  
+.home{
+  color:rgb(37, 5, 94);
+}
+
