--- a/src/home.css
+++ b/src/home.css
@@ -17,7 +17,8 @@ section:before{
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(to right, red, blue,green,pink, yellow);
+  transition: 2s;
+  background: linear-gradient(to right, rgb(3, 195, 6),rgb(232, 3, 42), rgb(246, 255, 0));
   mix-blend-mode: color;
    pointer-events: none;
 
