--- a/src/home.css
+++ b/src/home.css
@@ -6,8 +6,10 @@
 }
 
 section{
-  height: 100vh;
-  background: rgb(14, 13, 13);
+  min-height: 100vh;
+  background: rgb(236, 223, 223);
+  width: 100%;
+  /* height: 100%; */
 }
 
 section:before{
@@ -18,12 +20,17 @@ section:before{
   width: 100%;
   height: 100%;
   transition: 2s;
-  background: linear-gradient(to right, rgb(3, 195, 6),rgb(232, 3, 42), rgb(246, 255, 0));
-  mix-blend-mode: color;
+
+  /* background: linear-gradient(to right, rgb(3, 195, 6),rgb(232, 3, 42), rgb(246, 255, 0)); */
+  /* mix-blend-mode: color; */
    pointer-events: none;
-
-
 }
+.logo{
+  object-fit:cover;
+  width: 50%;
+  height: 50%; 
+}
+
 video{
   object-fit:cover;
   width: 100%;
@@ -32,14 +39,15 @@ video{
 
 h1{
   margin: 0;
+  margin-left: 200px;
   padding: 0;
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
   width: 100%;
   text-align: center;
-  color: rgb(209, 227, 204);
-  font-size: 5rem;
+  color: rgba(33, 34, 1, 0.884);
+  font-size: 4rem;
   font-family: sans-serif;
   letter-spacing: 0.2rem;
 }
